devops: Implementação do sonar na publicação do pacote. Correção de issues do Sonar